style: Move music button to bottom-left to prevent overlap with cart

--- a/styles/music.css
+++ b/styles/music.css
@@ -2,7 +2,7 @@
 .music-btn {
     position: fixed;
     bottom: 20px;
-    right: 20px;
+    left: 20px;
     width: 50px;
     height: 50px;
     border-radius: 50%;
